<resources>
    <string name="common_app_name">CPRSS Notification Receiver</string>
    <string name="common_service_name" translatable="false">CPRSS</string>
    <string name="aedlist_latitude">Latitude: %f</string>
    <string name="aedlist_longitude">Longitude: %f</string>
    <string name="locstatus_outofservice">You are in out of service area of location service!</string>
    <string name="locstatus_temp">Location information is temporarily unavailable.</string>
    <string name="locstatus_unknown">The status of location information is unknown.</string>
    <string name="notify_locservice_disable">Location service has been disabled.</string>
    <string name="notify_locservice_disabled_detail">We\'ll receive all notifications, regardless of location.\nTo discard far notifications, please enable the location service.</string>
    <string name="notify_locservice_enabled">Location service has been enabled now.</string>
    <string name="notify_locservice_enabled_detail">Thank you for your cooperation.</string>
    <string name="notify_disconnected">The connection with the server has been lost.</string>
    <string name="notify_disconnection_detail">We cannot receive any notifications.</string>
    <string name="notify_disconnected_context">If you suspect a server problem, please contact the developer.</string>
    <string name="notify_aed_open">AED operation has been started. Probably support for lifesaving is required!.</string>
    <string name="notify_aed_open_detail">Tap here to check the location.</string>
    <string name="notify_aed_open_context">Need support for lifesaving within the set range\nPlease cooperate with lifesaving!\nTap to check the location.</string>
    <string name="notify_aed_close">AED operation has been finished.</string>
    <string name="notify_aed_close_detail">No further lifesaving support is required. Thank you very much to your cooperation.</string>
    <string name="common_app_title">Notification Receiver</string>
    <string name="manifest_act_title_aedlocation" translatable="false">Map</string>
    <string name="notify_background">Service Status</string>
    <string name="about_location">This application can know where are you to determine whether to receive notifications.\nThis application never sends the location to the outside, such as AEDs, the CPRSS Server.</string>
    <string name="dialog_loc_perm_title">"Permission to get location information is needed. "</string>
    <string name="dialog_loc_perm_context">In this application, the information to be notified is selected using the location information to obtain only the surrounding information.\nPlease allow location information acquisition in the dialog displayed on the next screen.\nIf rejected, the application will be terminated.\n</string>
    <string name="notify_reconnected">The connection with the server has been restored.</string>
    <string name="dialog_loc_permission_turnedoff">Notice from %s:\nLocation permission turned off</string>
    <string name="dialog_loc_permission_turnedoff_context">The application will be terminated because processing cannot continue.\nPlease allow the location permission and restart to continue the service.</string>
    <string name="mainui_list_title">Notified AEDs List</string>
    <string name="mainui_list_description">Tap below contents to check the location of the AED.</string>
    <string name="locationui_location_description">Long tap here to check the location via Map application.</string>
    <string name="locationui_location_warning">The displayed position is APPROXIMATE!</string>
    <string name="set_maximum_notification_range">Maximum notification range</string>
    <string name="set_time_separating">Rules for coloring by time</string>
    <string name="set_very_short">Duration to determine as “Very short”</string>
    <string name="set_few_late">Duration to determine as \"A little late\"</string>
    <string name="set_late">Duration to determine as \"Late\"</string>
    <string name="set_what_is_time_sep">What is \"Coloring by time?\"</string>
    <string name="set_category_notify_rule">Rules of notification</string>
    <string name="help_coloring_by_time_context">
        <![CDATA[
        After time passed after we received notifications, the colors of lists change.
        This is to decide the priority of notification based on the time passed after notification.<br>
        Colors change in the following step:<br>
        <br>
        <b><font color="#5433a7">[ Very short ]  %d minutes after received a notification</b></font><br>
        　<font color="#dddddd"><span style="background-color:#5433a7">Changes into the purple.</span></font> The same as 1st color in the above picture.<br>
        　Lifesaving from now might be very effective.<br>
        <br>
        <b><font color="#a50000">[ A little late ]  %d minutes after received a notification</b></font><br>
        　<font color="#dddddd"><span style="background-color:#a50000">Changes into the red.</span></font> The same as 2nd color in the above picture.<br>
        　A little time passed after received notification, but lifesaving may be helpful.<br>
        <br>
        <b><font color="#535353">[ Late ]  %d minutes after received a notification</b></font><br>
        　<font color="#dddddd"><span style="background-color:#535353">Changes into the gray.</span></font> The same as 3rd color in the above picture.<br>
        　 The ambulance may have arrived and the patient may have been transported already.<br>
        <br>
        ]]>
    </string>
    <string name="set_title">Settings</string>
    <string name="help_maximum_notify_range">What is \"Maximum notification range?\"</string>
    <string name="help_maximum_notify_range_context">
        <![CDATA[
        You can block notifications that occur far away. <br>
        This will allow you to see only the notifications that you can support lifesaving. <br>
        <br>
        Setting “0Km” disables this block function. <br>
        However, it is not recommended because you will receive all notifications regardless of distance. <br>
        ]]>
    </string>
    <string name="mainui_setting">Tap to move to settings screen</string>
    <string name="set_about_this_service">About this service</string>
    <string name="set_about_location">About location information</string>
    <string name="notify_service_fine">Working normally.</string>
    <string name="notify_service_location_enable">Location service is running.</string>
    <string name="notify_service_server_temporality">Trying re-connect to the server...</string>
    <string name="notify_service_server_failed">Unable to connect to server</string>
    <string name="notify_service_location_disable">Location service is not running.</string>

</resources>
